# tux-pet

./: .gitignore  AGENTS.md  AppImageBuilder.yml  Cargo.toml  Dockerfile  Makefile  README.md  tux-pet-dbgsym_0.1.0-1_amd64.ddeb
.github/workflows/: build.yml
AppDir/: AppRun.env  tux-pet.desktop
assets/pet/Tux/: pet.json5
assets/pet/kitty/: pet.json5
assets/pet/tux/: tux-pet.desktop
debian/: control  copyright  debhelper-build-stamp  files  rules  tux-pet.install  tux-pet.substvars
debian/.debhelper/tux-pet/: dbgsym-build-ids
debian/.debhelper/tux-pet/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/tux-pet/dbgsym-root/usr/share/doc/: tux-pet-dbgsym
debian/tux-pet/DEBIAN/: control  md5sums
src/: main.rs  menu.rs  settings.rs  shared.rs  video.rs
