[package]
name = "tux-pet"
version = "0.1.0"
edition = "2021"

[dependencies]
x11rb = { version = "0.13", features = ["image", "shape", "render"] }
png = "0.17"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
resvg = "0.44"
ffmpeg-sys-next = { version = "8", default-features = false, features = ["avcodec", "avformat", "swscale"] }
cairo = { package = "cairo-rs", version = "0.20", features = ["png", "freetype"] }
freetype-rs = "0.37"
once_cell = "1"
json5 = "0.4"
zbus = { version = "4", default-features = false, features = ["blocking", "async-io"] }
tungstenite = "0.24"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rand = "0.8"
